--- a/02_DOM/01_get_element_node/02_use-tag-name.html
+++ b/02_DOM/01_get_element_node/02_use-tag-name.html
@@ -36,7 +36,7 @@
         let changeColor = 0;
 
         for(let i =0;  i<$lists.length; i++){
-            $lists[i].style.backgroundColor ="rbg(130, 220,"+ changeColor+")";
+            $lists[i].style.backgroundColor ="rgb(130, 220,"+ changeColor+")";
             changeColor += 50;
         }   
         
